# JourneyMapStitcherGUI

./: .gitignore  README.md  build.bat  dev build.bat  dev.bat  index.html  package.json  vite.config.js
src/: App.vue  index.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: get_waypoint.rs  get_world.rs  main.rs
src/select_world/: index.html  main.js  select_world.vue
