[package]
name = "Journey-Map-Stitcher-GUI"
version = "0.0.0"
description = "Stitch Journey Map image data into crazy large images with a GUI"
authors = ["FBanna"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "process-exit", "window-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.7"
turbojpeg = {version = "0.5", features = ["image"] }
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arc = "0.0.1"
tokio-utils = "0.1.2"
tokio-util = "0.7.10"
futures-util = "0.3.29"
bytes = "1.5.0"
http-body = "0.4.5"
directories = "5.0.1"
paths-as-strings = "0.1.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
